--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -24,7 +24,7 @@
 		}
 
 		.container-fluid {
-			  max-width: 800px;
+			max-width: 800px;
 			margin: auto;
 			display: flex;
 			align-items: center;
@@ -34,7 +34,7 @@
 		}
 		
 		.container-fluid img {
-		margin-right: 10px;
+			margin-right: 10px;
 		}
 
 		.row > .col-sm-4 {
@@ -57,14 +57,33 @@
 	</style>
 </head>
 <body>
-<div class="container-fluid">
-	<h2>Picture Gallery</h2>
-	<img src="https://www.pngkit.com/png/full/237-2373949_ue-logos-university-of-the-east-caloocan-logo.png" width="64px" height="64px">    <h2>CIP1101: Midterm Quiz</h2>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>                        
+				</button>
+				<a class="navbar-brand" href="#">Picture Gallery</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">Gallery</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="container-fluid">
+		<h2>Picture Gallery</h2>
+		<img src="https://www.pngkit.com/png/full/237-2373949_ue-logos-university-of-the-east-caloocan-logo.png" width="64px" height="64px">    <h2>CIP1101: Midterm Quiz</h2>
 	
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+<li data-target="#myCarousel" data-slide-to="1"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
 		</ol>
 
@@ -112,4 +131,3 @@
 			<img src="Diluc.jpg" class="img-responsive">
 		</div>
 </body>
-	</html>
